# crudly

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
example/src/database/: models.py
example/src/schemas/: posts.py
src/crudly/: crudly.py  exceptions.py
src/example/src/: app.py
src/example/src/database/: session.py
