[project]
name = "crudly"
version = "2025.2.14.1"
description = "Super simple FastAPI CRUD generator for SQLModel ORM"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.8",
    "sqlmodel>=0.0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "black"
]
